--- a/views/a.ejs
+++ b/views/a.ejs
@@ -1,1 +1,11 @@
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>  
+        <%= title  %>
+    </title>
+    <link rel="stylesheet" href="/style.css">
+
+</head>
+
 <h1>hi <%= name %></h1>
