--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,3 +1,11 @@
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="/style.css">
+
+</head>
+
 <% if(messages.error){ %>
 <%= messages.error %>
 <% } %>
