--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <button type="submit">Log Out</button> <!-- Submit button -->
 </form>
 <a href="/tasks">tasks</a> <!-- Link to tasks page -->
-
+<a href="/register">register</a>
 <script>
     document.getElementById("logoutForm").addEventListener("submit", function(event) {
         const originalMethod = document.getElementById("logoutForm").elements["originalMethod"].value;
